Improvements in UI

--- a/knowledge/index.html
+++ b/knowledge/index.html
@@ -18,12 +18,9 @@
     <div id="main-content">
         <h2>What can I help with?</h2>
         <div id="prompt">
-            <button onclick="attachment()" id="btn-attchment">
-                <img id="img1" src="../img/attachment.png" alt="attachment">
-            </button>
             <input placeholder="Message StoryGPT" type="text">
             <button onclick="upload()" id="btn-upload">
-                <img id="img2" src="../img/upload.png" alt="upload">
+                <img id="img1" src="../img/arrow.png" alt="upload">
             </button>
         </div>
     </div>
@@ -33,9 +30,6 @@
    </div>
 
    <script>
-    function attachment() {
-        console.log("Attachment button clicked")
-    }
     function upload() {
         console.log("Upload button clicked")
     }
