--- a/knowledge/login.html
+++ b/knowledge/login.html
@@ -7,6 +7,10 @@
     <title>Login</title>
     <link rel="stylesheet" href="../assets/CSS/main.css">
     <link rel="stylesheet" href="../assets/CSS/login.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -22,8 +26,8 @@
             <button type="button" id="login-button">Login</button>
         </form>
         <p>OR</p>
-        <button onclick="googleLogin()" type="button" id="google-button"><img src="../img/google-icon.png" alt="Google Logo"
-                id="google-logo">Continue with Google</button>
+        <button onclick="googleLogin()" type="button" id="google-button"><img src="../img/google-icon.png"
+                alt="Google Logo" id="google-logo">Continue with Google</button>
     </div>
 
     <script src="../assets/JS/login.js"></script>
